# death-animations

./: CMakeLists.txt  LICENSE  about.md  changelog.md  mod.json
.github/workflows/: android32.yml  multi-platform.yml
resources/sounds/: hippo-1.opus  hippo-2.opus  hippo-3.opus  hippo.opus  hippo_4.opus
src/: Includes.hpp  main.cpp
src/Animations/: AmongUs.hpp  BaseAnimation.hpp  Blood.hpp  Bsod.hpp  CBFDetected.hpp  Celeste.hpp  Congregation.hpp  FadeOut.hpp  GTAV.hpp  Ghost.hpp  HollowKnight.hpp  Jumpscare.hpp  LevelComplete.hpp  Maro.hpp  Minecraft.hpp  MrHippo.hpp  NewBest.hpp  Poof.hpp  Pop.hpp  PracticeComplete.hpp  SpeechBubble.hpp  Terraria.hpp  ToBeContinued.hpp  Undertale.hpp  Wasted.hpp  What.hpp  Wii.hpp  YouDied.hpp
src/Other/: PreviewDelegate.hpp  SelectedAnimation.hpp  SoundManager.cpp  SoundManager.hpp  SpeedCCParticleSystemQuad.hpp  Utils.cpp  Utils.hpp  Variables.hpp
src/UI/: AmongUsSetting.cpp  AmongUsSetting.hpp  AnimationCell.cpp  AnimationCell.hpp  AnimationSettingsLayer.cpp  AnimationSettingsLayer.hpp  AnimationsLayer.cpp  AnimationsLayer.hpp  BaseSetting.cpp  BaseSetting.hpp  CelesteColorSetting.cpp  CelesteColorSetting.hpp  CelesteFastSetting.cpp  CelesteFastSetting.hpp  FolderSetting.cpp  FolderSetting.hpp  JumpscareSetting.cpp  JumpscareSetting.hpp  ListRow.cpp  ListRow.hpp  MonologueSetting.cpp  MonologueSetting.hpp  PercentSetting.cpp  PercentSetting.hpp  PercentToggleSetting.cpp  PercentToggleSetting.hpp  PreviewDelegate.hpp  PreviewLayer.cpp  PreviewLayer.hpp  ProScrollLayer.cpp  ProScrollLayer.hpp  ScaleSetting.cpp  (+13 more)
(+16 files in other folders)
